fix pagination alignment in IE

--- a/sass/aha-table.scss
+++ b/sass/aha-table.scss
@@ -238,6 +238,8 @@ label {
   border-bottom: 1px solid $inuit-table-border-color;
   user-select: none;
   -webkit-tap-highlight-color: transparent;
+  padding-top: 0.8rem;
+  padding-bottom: 0.8rem;
 }
 
 .paginationContainer, .pagesize {
@@ -246,7 +248,6 @@ label {
   align-items: center;
   justify-content: space-between;
   flex-wrap: wrap;
-  min-height: calculateRem(45px);
 }
 
 .rowsPerPage {
